# contextify

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Procfile  README.md  package.json  pyproject.toml  requirements.txt
.scratch/cognee-native-framework-store/: PRD.md  cognee-native-framework-store.md  recall-spike-findings.md  recall_spike.py  recall_spike2.py
.scratch/framework-retrieval-system/: PRD.md  slicing-notes.md
context-for-claude/: framework-retrieval-system.md
contextify/: __init__.py  __main__.py  api.py  demo.py  llm.py  models.py  repo_context.py  server.py
contextify/framework_store/: __init__.py  promotion.py  seed.py  store.py
contextify/problem_abstraction/: __init__.py  abstract.py
contextify/reflection/: __init__.py  history.py  reflect.py  tree_distance.py
contextify/retrieval/: __init__.py  cache.py  resolve.py
contextify/templates/: demo.html
issues/: cognee-store-02-seed-and-read-tree.md  cognee-store-03-write-back-and-docs.md  slice2-testing-branch-leading-misfit-signal.md  slice3-reflect-seam-ground-truth-misfit.md  slice4-human-in-loop-promotion-gate.md  slice5-path-caching.md
issues/done/: 01-cognee-retrieval-quality-spike.md  02-debugging-retrieve-framework-tracer-bullet.md  03-testing-branch-leading-misfit-signal.md  04-reflect-seam-ground-truth-misfit.md  05-human-in-loop-promotion-gate.md  (+9 more)
tests/: fixtures.py  test_api.py  test_cognee_document_store.py  test_misfit.py  test_models.py  test_path_cache.py  test_promotion.py  test_reflect.py  test_retrieval.py  test_store.py  test_upstream_fixtures.py
(+6 files in other folders)
